--- a/compra.html
+++ b/compra.html
@@ -7,6 +7,18 @@
   <title>Compra</title>
 </head>
 <body>
+  <header>
+    <h1>Encanto Cacau </h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="#">Chocolates</a></li>
+            <li><a href="#">Nossas Marcas</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="compra.html">Sua Compra</a></li>
+        </ul>
+    </nav>
+  </header>
   <h1>Informações da Compra</h1>
   <form>
     <label for="nome">Nome:</label>
