--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilos.css">
   <script src="https://cdn.jsdelivr.net/npm/validator@13.6.0"></script>
-  <title>Compra Online</title>
+  <title>Encanto Cacau</title>
 </head>
 <body>
+  <header>
+    <h1>Encanto Cacau </h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="#">Chocolates</a></li>
+            <li><a href="#">Nossas Marcas</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="compra.html">Sua Compra</a></li>
+        </ul>
+    </nav>
+  </header>
   <div id="app">
-    <h1>Loja Online</h1>
     <div id="cart">
       <h2>Carrinho de Compras</h2>
       <ul id="cart-items"></ul>
