--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/validator@13.6.0"></script>
   <title>Encanto Cacau</title>
 </head>
@@ -22,22 +23,88 @@
   </header>
   <div id="app">
     <div id="cart">
-      <h2>Carrinho de Compras</h2>
+      <i class="fa fa-shopping-cart" aria-hidden="true"></i><h2>Carrinho de Compras</h2>
       <ul id="cart-items"></ul>
       <p id="total">Total: R$ 0.00</p>
       <button> <a href="compra.html">Finalizar Compra</a></button>
     </div>
-    <div id="products">
-      <h2>Produtos</h2>
-      <ul>
-        <li>Produto 1 - R$ 10.00 <button onclick="addToCart(1)">Adicionar ao Carrinho</button></li>
-        <li>Produto 2 - R$ 20.00 <button onclick="addToCart(2)">Adicionar ao Carrinho</button></li>
-        <li>Produto 3 - R$ 15.00 <button onclick="addToCart(3)">Adicionar ao Carrinho</button></li>
-        <li>Produto 4 - R$ 25.00 <button onclick="addToCart(4)">Adicionar ao Carrinho</button></li>
-        <li>Produto 5 - R$ 30.00 <button onclick="addToCart(5)">Adicionar ao Carrinho</button></li>
-      </ul>
-    </div>
   </div>
+
+  <main>
+    <section class="cards">
+        <div class="card">
+            <img src="img/bis preto.jpg" alt="Bis Preto">
+            <h2>Bis Lacta Preto</h2>
+            <p>R$ 5,99</p>
+            <button onclick="addToCart(1)">Adicionar ao Carrinho</button>
+        </div>
+
+        <div class="card">
+            <img src="img/bis.jpg" alt="Bis branco">
+            <h2>Bis Lacta Branco</h2>
+            <p>R$ 6,00</p>
+            <button onclick="addToCart(2)">Adicionar ao Carrinho </button>
+        </div>
+
+        <div class="card">
+            <img src="img/caixa lacta.jpg" alt="Caixa de bombom Lacta">
+            <h2> Caixa de Bombom Lacta</h2>
+            <p>R$ 18,90</p>
+            <button onclick="addToCart(3)">Adicionar ao Carrinho</button>
+        </div>
+    </section>
+    
+  <section class="cards">
+    <div class="card">
+      <img src="img/caixa nestle.jpg" alt="Caixa de Bombom Nestle">
+      <h2>Caixa de Bombom Nestlé</h2>
+      <p>R$ 16,50 </p>
+      <button onclick="addToCart(4)">Adicionar ao Carrinho</button>
+    </div>
+
+    <div class="card">
+      <img src="img/ferrero rocher.png" alt="Ferrero Rocher">
+      <h2>Caixa Ferrero Rocher - 15un</h2>
+      <p>R$ 45,00</p>
+      <button onclick="addToCart(5)">Adicionar ao Carrinho</button>
+    </div>
+
+    <div class="card">
+      <img src="img/ferrero rondnoir.png" alt="Ferrero Rondnoir">
+      <h2>Caixa Ferrero Rondnoir - 14un </h2>
+      <p>R$ 48,00</p>
+      <button onclick="addToCart(6)">Adicionar ao Carrinho </button>
+    </div>
+  </section>   
+
+  <section class="cards">
+    <div class="card">
+      <img src="img/raffaello.jpg" alt="Raffaello">
+      <h2>Caixa Raffaello - 15un </h2>
+      <p>R$ 49,99 </p>
+      <button onclick="addToCart(7)">Adicionar ao Carrinho</button>
+    </div>
+
+    <div class="card">
+      <img src="img/kit kat.jpg" alt="Kit Kat Preto">
+      <h2>Kit Kat Nestlé Preto </h2>
+      <p>R$ 4,00</p>
+      <button onclick="addToCart(8)">Adicionar ao Carrinho</button>
+    </div>
+
+    <div class="card">
+      <img src="img/kit kat branco.jpg" alt="Kit Kat Branco">
+      <h2>Kit Kat Nestlé Branco </h2>
+      <p>R$ 4,50</p>
+      <button onclick="addToCart(9)">Adicionar ao Carrinho </button>
+    </div>
+  </section>   
+</main>
+
+<footer>
+    <p>&copy; 2023 Encanto Cacau | Criado por Sophia Duquesne e Carlos Eduardo </p>
+</footer>
+
   <script src="myscript.js"></script>
 </body>
 </html>
