--- a/compra.html
+++ b/compra.html
@@ -20,12 +20,12 @@
     </nav>
   </header>
   <h1>Informações da Compra</h1>
-  <form id="purchaseForm">
+  <form>
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" pattern="[A-Za-zÀ-ú\s]+" title="Digite apenas letras e espaços" placeholder="Digite seu nome" required>
 
     <label for="cpf">CPF:</label>
-    <input type="text" id="cpf" name="cpf" value="" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="Ex: 999.999.999-99" required>
+<input type="text" id="cpf" name="cpf" value="" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="Ex: 999.999.999-99" required>
 
     <label for="email">E-mail:</label>
     <input type="email" id="email" name="email" value="" placeholder="Ex: exemplo@exemplo.com" required>
@@ -36,21 +36,7 @@
     <label for="cep">CEP:</label>
     <input type="text" id="cep" name="cep" value="" pattern="\d{8}" placeholder="Ex: 12345000" required>
 
-    <button type="submit">Confirmar Compra</button>
+    <button type="submit" onclick="checkout()">Confirmar Compra</button>
   </form>
-
-  <script src="https://cdn.jsdelivr.net/npm/validator@13.6.0"></script>
-  <script src="myscript.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const purchaseForm = document.getElementById('purchaseForm');
-      purchaseForm.addEventListener('submit', function (event) {
-        event.preventDefault(); // Evita o envio tradicional do formulário
-
-        // Chama a função de checkout definida no myscript.js
-        checkout();
-      });
-    });
-  </script>
 </body>
 </html>
