--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul id="cart-items"></ul>
       <p id="total">Total: R$ 0.00</p>
       <button> <a href="#myform">Finalizar Compra</a></button>
-      <button onclick="calculateTotalSales()">Calcular Total de Vendas</button>
+      <button onclick="calcularTotalVendas()">Calcular Total de Vendas</button>
     </div>
   </div>
 
