--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
     </section>
     
+    
   <section class="cards">
     <div class="card">
       <img src="img/caixa nestle.jpg" alt="Caixa de Bombom Nestle">
@@ -130,7 +131,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Encanto Cacau | Criado por Sophia Duquesne e Carlos Eduardo </p>
+    <p>&copy; 2023 Encanto Cacau | Criado por Carlos Eduardo e Sophia Duquesne</p>
   </footer>
 
   <script src="myscript.js"></script>
