--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               placeholder="Ex: 99999999999" required>
 
             <label for="cep">CEP:</label>
-            <input type="text" id="cep" name="cep" value="" pattern="\d{5}-\d{3}" placeholder="Ex: 12345000" required>
+            <input type="text" id="cep" name="cep" value="" pattern="\d{5}-\d{3}" placeholder="Ex: 12345-000" required>
 
             <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
 
